WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
83814
[BlackBerry] Web Inspector cookie expiry is showing the wrong date.
https://bugs.webkit.org/show_bug.cgi?id=83814
Summary
[BlackBerry] Web Inspector cookie expiry is showing the wrong date.
Konrad Piascik
Reported
2012-04-12 13:27:39 PDT
[BlackBerry] Web Inspector cookie expiry is showing the wrong date.
Attachments
Patch
(1.93 KB, patch)
2012-04-12 13:30 PDT
,
Konrad Piascik
no flags
Details
Formatted Diff
Diff
Patch
(1.93 KB, patch)
2012-04-12 13:34 PDT
,
Konrad Piascik
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Konrad Piascik
Comment 1
2012-04-12 13:30:31 PDT
Created
attachment 136959
[details]
Patch
Rob Buis
Comment 2
2012-04-12 13:33:08 PDT
Comment on
attachment 136959
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=136959&action=review
Since Konrad is almost but not quite a committer, I have to r- this, looks good except the typo.
> Source/WebCore/ChangeLog:9 > + to millieconds by multiplying by 1000.
Typo.
Konrad Piascik
Comment 3
2012-04-12 13:34:44 PDT
Created
attachment 136961
[details]
Patch
Rob Buis
Comment 4
2012-04-12 13:35:23 PDT
Comment on
attachment 136961
[details]
Patch LGTM.
WebKit Review Bot
Comment 5
2012-04-12 14:14:24 PDT
Comment on
attachment 136961
[details]
Patch Clearing flags on attachment: 136961 Committed
r114035
: <
http://trac.webkit.org/changeset/114035
>
WebKit Review Bot
Comment 6
2012-04-12 14:14:28 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug