[BlackBerry] Web Inspector cookie expiry is showing the wrong date. https://bugs.webkit.org/show_bug.cgi?id=83814

Patch by Konrad Piascik <kpiascik@rim.com> on 2012-04-12
Reviewed by Rob Buis.

The internal representation for expiry is seconds, we need to convert it
to milliseconds by multiplying by 1000.

The value from this method doesn't get used anywhere except Web Inspector.
Manually tested with Web Inspector by examining the CookieItemView in the Resources Panel.

* platform/blackberry/ParsedCookie.cpp:
(WebCore::ParsedCookie::appendWebCoreCookie):

Canonical link: https://commits.webkit.org/101329@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114035 268f45cc-cd09-0410-ab3c-d52691b4dbfc